  query)
- fix more &amp; issues in zm_redirect(..)
- removed deprecated method ZMTheme::includeStaticPageContent(..)
- added new setting 'isZMDefinePages' that will make the code look in the
  themes folder for define pages (example: lang/english/static/main_page.php)
- fix some typos in ZMRssItem
- add examples for debug config (error logging) to local.in.php

Release 0.8.4
- make gv_send form secure
- add validation to gv_send form
- add another parameter to zm_format_currency to be able to format only
  without converting (sorry, needs updated to a few templates again...)
- added new custom rule to validate a given amount against the current
  account's voucher balance
- added ZMCurrency::parse(..) to allow for reasonable currency parsing.
- added zm_parse_money(..) to allow simple money parsing based on the sessions
  currency
- added ZMGVSendConfirmController to make GV handling simpler
- fix zm_htmlencode(..) for other languages (for example, Chinese); #1796776
- move getVoucherBalanceForId(..) from ZMAccounts to ZMCoupons
- reimplemented GV send as ZenMagick controller and services
- logout only guest users if isLogoffGuestAfterOrder is set to true; #1796979
- add gv_redeem code! #1796794
- update ZMThemeSupportPatch to disable zen-cart header.php processing except
  for checkout; #1778150 and performance
- fix incompatibility of zm_useo2 and core.php; #1798448
- fix ZMCoreCompressor for plugins that contain subdirectories; #1798440
- fix plugin filterResponse handling; #1799509
- add sort order config value to plugins
- make zones load according to the inital country for registration and address
  forms
- allow validation rules to fail without an error message (this can be useful
  if the rule needs to generate multiple messages using zm_messages directly)
- added dynamic state reloading to the demo store for create_account using
  jQuery
- fixed privacy statement in create_account
- re-added external.php (lost since 0.8.1)